# telegram_bot

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
src/: bot.rs  error.rs  lib.rs  traits.rs
