[package]
name = "telegram-bot"
version = "0.1.0"
edition = "2021"
description = "A generic Telegram bot library for trading applications"
license = "MIT"

[dependencies]
teloxide = { version = "0.17", features = ["macros"] }
prettytable = "0.10"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"

[dev-dependencies]
tokio-test = "0.4"